--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "vlessheroku",
+  "name": "vl",
   "description": "Deploy vless on Heroku.",
   "keywords": [
     "vless"
@@ -7,10 +7,10 @@
   "env": {
     "UUID": {
       "description": "VLESS UUID",
-      "value": "3a53a3e5-da83-48d2-aee9-d88a498eb3dd"
+      "value": "2e3ac4ac-c484-40af-bb29-eeaef380de91"
     }
   },
-  "website": "https://github.com/GeekNAUer/",
-  "repository": "https://github.com/GeekNAUer/vlessheroku",
+  "website": "https://github.com/ddhjvsu13e/",
+  "repository": "https://github.com/ddhjvsu13e/kakhcea",
   "stack": "container"
 }
